# FlowState

./: .editorconfig  .env.example  .gitignore  CONTRIBUTING.md  README.md  alembic.ini  dkfnasidn  pyproject.toml  pytest.ini  requirements.txt
alembic/: env.py
alembic/versions/: 0001_initial.py
app/: __init__.py  celery_app.py  main.py
app/api/: adaptation.py  ai.py  auth.py  deps.py  focus.py  interactions.py  tasks.py  users.py
app/core/: config.py  security.py
app/db/: base.py  session.py
app/ml/: __init__.py  constants.py
app/ml/features/: __init__.py  extractor.py
app/ml/inference/: __init__.py  predictor.py
app/ml/models/: .gitkeep
app/ml/training/: __init__.py  train_effort.py  train_state.py
app/models/: __init__.py  adaptive_rule.py  focus_session.py  interaction.py  progress_tracker.py  task.py  user.py
app/schemas/: __init__.py  adaptation.py  adaptive_ml.py  auth.py  enums.py  focus.py  interaction.py  recommendation.py  task.py  user.py
app/services/: __init__.py  adaptation_service.py  ai_service.py  auth_service.py  focus_service.py  interactions_service.py  progress_service.py  recalculation.py  recommendation_service.py  tasks_service.py  users_service.py
app/worker/: tasks.py
data/ml/exports/: .gitkeep
docs/: ARCHITECTURE.md  DEVELOPMENT.md  SPRINT_PLAN.md
frontend/: package-lock.json  package.json  vitest.config.js
frontend/src/: App.jsx  main.jsx
frontend/src/api/: client.js  (+1 more)
scripts/: export_ml_datasets.py
tests/: conftest.py  test_auth.py  test_focus.py  test_health.py  test_interactions.py  test_tasks.py
(+43 files in other folders)
